# spectre

./: .clang-format  .clang-uml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  Doxyfile  FEATURES.md  GEMINI.md  README.md  codecov.yml  do.py  key.txt  learnings_agents.md  r.bat  r.sh  sonar-project.properties  t.bat  t.sh  tsan.supp
app/: app.cpp  app.h  (+41 more)
libs/draxul-app-support/: CMakeLists.txt
libs/draxul-app-support/include/draxul/: app_config.h  app_config_types.h  cursor_blinker.h  grid_rendering_pipeline.h  render_test.h
libs/draxul-app-support/src/: app_config.cpp  app_config_io.cpp  cursor_blinker.cpp  grid_rendering_pipeline.cpp  render_test.cpp  toml_support.h  ui_request_worker.cpp
libs/draxul-citydb/: CMakeLists.txt
libs/draxul-citydb/include/draxul/: citydb.h
libs/draxul-citydb/src/: citydb.cpp
libs/draxul-config/: CMakeLists.txt
libs/draxul-config/include/draxul/: app_config.h  app_config_io.h  app_config_types.h  app_options.h  config_document.h  gui_actions.h  keybinding_parser.h  toml_support.h
libs/draxul-config/src/: app_config_io.cpp  config_document.cpp  keybinding_parser.cpp
libs/draxul-gui/: CMakeLists.txt
libs/draxul-gui/src/: palette_renderer.cpp  toast_renderer.cpp  tooltip.cpp
libs/draxul-host/: CMakeLists.txt
libs/draxul-host/include/draxul/: alt_screen_manager.h  base64.h  clipboard_util.h  grid_host_base.h  host.h  host_registry.h  local_terminal_host.h  mouse_reporter.h  scrollback_buffer.h  selection_manager.h  terminal_host_base.h  terminal_key_encoder.h  terminal_sgr.h  vt_parser.h  vt_state.h
libs/draxul-host/src/: alt_screen_manager.cpp  conpty_process.cpp  conpty_process.h  grid_host_base.cpp  host_factory.cpp  host_registry.cpp  local_terminal_host.cpp  mouse_reporter.cpp  nvim_host.cpp  nvim_host.h  powershell_host_win.cpp  scrollback_buffer.cpp  selection_manager.cpp  shell_host_unix.cpp  shell_host_win.cpp  terminal_host_base.cpp  terminal_host_base_csi.cpp  terminal_key_encoder.cpp  terminal_sgr.cpp  unix_pty_process.cpp  unix_pty_process.h  vt_parser.cpp
libs/draxul-megacity/: CMakeLists.txt
libs/draxul-megacity/include/draxul/: megacity_code_config.h  megacity_host.h
libs/draxul-megacity/src/: building_tooltip.cpp  building_tooltip.h  city_builder.cpp  city_builder.h  city_helpers.h  city_input_state.cpp  city_input_state.h  city_picking.cpp  city_picking.h  isometric_camera.cpp  isometric_camera.h  isometric_scene_pass.h  isometric_scene_types.h  lcov_coverage.cpp  lcov_coverage.h  live_city_metrics.cpp  live_city_metrics.h  megacity_code_config.cpp  megacity_host.cpp  megacity_material_assets.cpp  megacity_material_assets.h  megacity_render.mm  megacity_render_vk.cpp  mesh_library.cpp  mesh_library.h  scene_components.h  scene_snapshot_builder.cpp  scene_snapshot_builder.h  scene_world.cpp  scene_world.h  semantic_city_layout.cpp  semantic_city_layout.h  shadow_cascade.cpp  shadow_cascade.h  sign_label_atlas.cpp  sign_label_atlas.h  ui_city_map_panel.cpp  ui_treesitter_panel.cpp  ui_treesitter_panel.h
libs/draxul-nanovg/: CMakeLists.txt
libs/draxul-nanovg/include/draxul/: nanovg_pass.h
libs/draxul-nanovg/src/: nanovg_mtl.h  nanovg_mtl.mm  nanovg_mtl_shaders.h  nanovg_pass_metal.mm  nanovg_pass_vk.cpp  nanovg_vk.cpp  nanovg_vk.h  nanovg_wrapper.c
libs/draxul-render-test/: CMakeLists.txt
libs/draxul-render-test/include/draxul/: json_util.h  nanovg_demo_host.h  render_test.h
libs/draxul-render-test/src/: nanovg_demo_host.cpp  render_test.cpp
libs/draxul-renderer/: CMakeLists.txt
libs/draxul-renderer/src/: renderer_factory.cpp  renderer_state.cpp
libs/draxul-runtime-support/: CMakeLists.txt
libs/draxul-runtime-support/src/: cursor_blinker.cpp  grid_rendering_pipeline.cpp  session_attach.cpp  system_resource_monitor.cpp  ui_request_worker.cpp
libs/draxul-window/: CMakeLists.txt
libs/draxul-window/src/: sdl_clipboard.cpp  sdl_clipboard.h  sdl_event_translator.cpp  sdl_event_translator.h  sdl_file_dialog.cpp  sdl_file_dialog.h  sdl_window.cpp  sdl_window_macos.mm  sdl_window_win32.cpp
libs/spectre-renderer/: CMakeLists.txt
libs/spectre-window/: CMakeLists.txt
libs/spectre-window/src/: sdl_window.cpp
modules/megacity/: CMakeLists.txt
modules/megacity/draxul-megacity/: CMakeLists.txt
tests/: CMakeLists.txt  app_config_tests.cpp  app_dispatch_tests.cpp  app_pump_tests.cpp  app_smoke_tests.cpp  atlas_overflow_multi_host_tests.cpp  attr_id_tests.cpp  attribute_cache_tests.cpp  bmp_write_tests.cpp  celltext_unicode_corpus_tests.cpp  chrome_host_rename_tests.cpp  chrome_host_tabbar_tests.cpp  citydb_tests.cpp  cli_args_tests.cpp  clipboard_tests.cpp  command_palette_tests.cpp  config_edge_case_tests.cpp  config_lifecycle_tests.cpp  corrupt_config_recovery_tests.cpp  cursor_blinker_tests.cpp  dpi_hotplug_integration_tests.cpp  dpi_scaling_tests.cpp  draxul_geometry_tests.cpp  encode_key_tests.cpp  fd_inheritance_tests.cpp  file_drop_tests.cpp  font_fallback_corpus_tests.cpp  font_size_tests.cpp  font_tests.cpp  frame_timer_tests.cpp  fuzzy_match_tests.cpp  grid_host_cursor_tests.cpp  grid_host_null_handle_tests.cpp  grid_line_bounds_tests.cpp  grid_oob_tests.cpp  grid_rendering_pipeline_tests.cpp  grid_tests.cpp  gui_action_handler_tests.cpp  highlight_tests.cpp  hlattr_style_flags_tests.cpp  (+67 more)
tests/render/: basic-view.toml  cmdline-view.toml  ligatures-view.toml  nanovg-demo.toml  panel-view.toml  readme-hero.toml  readme-overlay.toml  readme-view.toml  unicode-view.toml  wide-char-scroll.toml
tests/render/fixtures/: basic-view.txt  cmdline-view.txt  ligatures-view.txt  unicode-view.txt  wide-char-scroll.txt
tests/support/: fake_clock.h  fake_glyph_atlas.h  fake_grid_handle.h  fake_grid_host.h  fake_grid_pipeline_renderer.h  fake_host.h  fake_renderer.h  fake_rpc_channel.h  fake_window.h  home_dir_redirect.h  pty_capture_fixture.h  replay_fixture.h  scoped_env_var.h  temp_dir.h  test_host_callbacks.h  test_local_terminal_host.h  test_support.h  test_terminal_host_fixture.h  test_vt_terminal_host.h
(+1027 files in other folders)
